[project]
name = "testforge"
version = "1.0.0"
description = "CSV test and validation CLI"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Vlad Romaliyskiy", email = "romaliiskii.v@gmail.com" }
]
dependencies = [
  "colorama"
]

[project.scripts]
csv-validator = "utils.cli.main:main"
csv-generator = "utils.devtools.generators.csv_generator:cli"
schema-generator = "utils.core.schema:cli"
csv-tester = "utils.devtools.batch_tests.batch_runner:cli"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["utils"]


[tool.coverage.run]
omit = ["utils/extract_project_code.py"]